[gd_scene load_steps=19 format=3 uid="uid://cvkc0lp2nyiom"]

[ext_resource type="Script" uid="uid://bspaq0jpfvbvc" path="res://scenes/player/Player.gd" id="1_j8s6w"]
[ext_resource type="AudioStream" uid="uid://bq0450kgsrwjr" path="res://assets/sfx/footsteps/Gravel/Gravel Step.ogg" id="2_5osf5"]
[ext_resource type="PackedScene" uid="uid://mjuwub3ibqk0" path="res://scenes/player/eyelids.tscn" id="3_65kuw"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_5osf5"]

[sub_resource type="GDScript" id="GDScript_j8s6w"]
script/source = "extends Camera3D

func change_fov(amount:int, decrease:bool=false) -> void:
	#amount: Cantidad en grados
	#decrease: Si incrementa o no, por defecto es falso
	var sign = 1
	if decrease: sign *= -1
	
	var target = fov + (amount * sign)
	print(target)
	for i in amount:
		if(fov != target):
			fov += amount * sign
	
	
"

[sub_resource type="Animation" id="Animation_65kuw"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerCamera:fov")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [75.0]
}

[sub_resource type="Animation" id="Animation_iec1l"]
resource_name = "camera_fov_decrease"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerCamera:fov")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(0.133972, 1),
"update": 0,
"values": [90.0, 75.0]
}

[sub_resource type="Animation" id="Animation_ipxhu"]
resource_name = "camera_fov_increase"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerCamera:fov")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(0.233258, 1),
"update": 0,
"values": [75.0, 85.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ipxhu"]
_data = {
&"RESET": SubResource("Animation_65kuw"),
&"camera_fov_decrease": SubResource("Animation_iec1l"),
&"camera_fov_increase": SubResource("Animation_ipxhu")
}

[sub_resource type="Animation" id="Animation_5osf5"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_j8s6w"]
resource_name = "head_bob"
length = 0.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5),
"transitions": PackedFloat32Array(0.870551, 1, 1.36604),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 0.2, 0), Vector3(0, 0, 0)]
}
tracks/1/type = "audio"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../SFX/Step")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("2_5osf5")
}],
"times": PackedFloat32Array(0)
}
tracks/1/use_blend = true

[sub_resource type="AnimationLibrary" id="AnimationLibrary_65kuw"]
_data = {
&"RESET": SubResource("Animation_5osf5"),
&"head_bob": SubResource("Animation_j8s6w")
}

[sub_resource type="Animation" id="Animation_01bdt"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_22eib"]
resource_name = "tilt_left"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(0.164938, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 0, 0.0523599)]
}

[sub_resource type="Animation" id="Animation_xbqr7"]
resource_name = "tilt_right"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(0.164938, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0.0523599, 0, -0.0523599)]
}

[sub_resource type="Animation" id="Animation_ey55b"]
resource_name = "untilt_left"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(0.307786, 1),
"update": 0,
"values": [Vector3(0, 0, 0.0523599), Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_ni6x6"]
resource_name = "untilt_right"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(0.307786, 1),
"update": 0,
"values": [Vector3(0.0523599, 0, -0.0523599), Vector3(0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ey55b"]
_data = {
&"RESET": SubResource("Animation_01bdt"),
&"tilt_left": SubResource("Animation_22eib"),
&"tilt_right": SubResource("Animation_xbqr7"),
&"untilt_left": SubResource("Animation_ey55b"),
&"untilt_right": SubResource("Animation_ni6x6")
}

[node name="Player" type="CharacterBody3D"]
script = ExtResource("1_j8s6w")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_5osf5")

[node name="Head" type="Node3D" parent="."]
unique_name_in_owner = true

[node name="PlayerCamera" type="Camera3D" parent="Head"]
unique_name_in_owner = true
script = SubResource("GDScript_j8s6w")

[node name="InteractRay" type="RayCast3D" parent="Head/PlayerCamera"]
unique_name_in_owner = true
target_position = Vector3(0, 0, -2)
collision_mask = 4
collide_with_areas = true
collide_with_bodies = false
debug_shape_custom_color = Color(0, 1, 0, 1)

[node name="SprintAnimation" type="AnimationPlayer" parent="Head"]
libraries = {
&"": SubResource("AnimationLibrary_ipxhu")
}

[node name="HeadBobAnimation" type="AnimationPlayer" parent="Head"]
libraries = {
&"": SubResource("AnimationLibrary_65kuw")
}

[node name="HeadTiltAnimation" type="AnimationPlayer" parent="Head"]
libraries = {
&"": SubResource("AnimationLibrary_ey55b")
}

[node name="Context" type="Label" parent="."]
offset_right = 1280.0
offset_bottom = 720.0
vertical_alignment = 1

[node name="SFX" type="Node3D" parent="."]

[node name="Step" type="AudioStreamPlayer3D" parent="SFX"]
volume_db = -12.0

[node name="Eyelids" parent="." instance=ExtResource("3_65kuw")]
